--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>editUS</title>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC1AJP6rZpv5Mby0Fh3cKYDweQnhbxwIc&callback=initMap"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
